# aoc-2018

./: .gitignore
1/: freq-1.hs  freq.hs
2/: boxes.hs
3/: cut.cabal  cut.hs
